--- a/app/assets/stylesheets/text.scss
+++ b/app/assets/stylesheets/text.scss
@@ -2,7 +2,7 @@
   width: 100%;
   margin-bottom: 5%;
   color: var(--dark-gray);
-  font-family: 'Roboto', sans-serif;
+  font: 100% $roboto-font-stack;
   font-size: 2.2rem;  
   font-weight: lighter;
   text-align: center;
@@ -11,7 +11,7 @@
 .alert {
   text-align: center;
   margin-bottom: 6px;
-  background-color: var(--ice);
+  background-color: $ice;
   font-size: 12px;
   p { font-size: 1rem; }
   ul { list-style: none; }
