Applied some sass guidelines

--- a/app/assets/stylesheets/abstracts/_variables.scss
+++ b/app/assets/stylesheets/abstracts/_variables.scss
@@ -14,5 +14,5 @@ $fast: 200ms;
 $slow: 750ms;
 
 //fonts 
-$ubuntu-font-stack: 'Ubuntu', sans-serif;
-$roboto-font-stack: 'Roboto', sans-serif;
+$ubuntu-font-stack: ('Ubuntu', sans-serif);
+$roboto-font-stack: ('Roboto', sans-serif);
