--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,7 +2,7 @@
   height: 30px;
   width: 100%;
   margin-bottom: 10px;
-  font: 100% $roboto-font-stack;
+  font: $roboto-font-stack;
   font-size: 14px;
   background-color: $ice;
   color: $gray;
