--- a/app/assets/stylesheets/pages/_clients.scss
+++ b/app/assets/stylesheets/pages/_clients.scss
@@ -50,8 +50,8 @@
 @media (max-width: 650px) {
   .clients-list {
     padding: 3rem;
-    .clients-list-card {
-      width: 500px;
+    .clients-list-item {
+      width: 400px;
       font-size: 1.1rem;
     }
   }
