--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,8 @@
   "components/text";
 
 @import 
-  "layout/navbar",
-  "layout/forms";
+  "shared/navbar",
+  "shared/forms";
 
 @import 
   "pages/clients";
