--- a/app/assets/stylesheets/shared/_navbar.scss
+++ b/app/assets/stylesheets/shared/_navbar.scss
@@ -1,8 +1,9 @@
 .navbar {
-  position: fixed;
-  transition: width $fast ease;
   width: 3rem;
   height: 100vh;
+  position: fixed;
+  z-index: 1;
+  transition: width $fast ease;
   background-color: $dark-gray;
   .navbar-nav {
     display: flex;
