Improve responsive behavior

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -13,6 +13,7 @@ body {
   font: 100% $ubuntu-font-stack;
   @include scrollbars(0.5em, 0.43em, $dark-yellow, $black);
   main {
+    max-height: 90vh;
     @include center-it;
   }
   @media (max-width: 650px) {
