--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,5 +1,5 @@
 <h3 class="header"><%= t('.header') %></h3>
-<% if !Client.exists? %>
+<% unless Client.exists? %>
   <p class="header"><%= t('.empty') %></p>
 <% end %>
 <% @clients.each do |client| %>
