Remove last_name from index

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -5,7 +5,7 @@
 <% @clients.each do |client| %>
   <%= link_to client_path(client), class:'clients-list' do %>
     <div class="clients-list-item">
-      <h3><%= "#{client.first_name} #{client.last_name[0]}." %></h3>
+      <h3><%= client.first_name %></h3>
     </div>
   <% end %>
 <% end %>
