--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,11 +5,11 @@
   "abstracts/variables";
 
 @import 
-  "base/base";
+  "base/base",
+  "base/typography";  
 
 @import
-  "components/buttons",
-  "components/text";
+  "components/buttons";
 
 @import 
   "shared/navbar",
@@ -18,6 +18,6 @@
 @import 
   "pages/clients";
 
-@import 
+@import
   url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap'),
-  url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+  url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
