--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -1,10 +1,8 @@
 .header {
   width: 100%;
-  margin-bottom: 5%;
-  color: var(--dark-gray);
+  color: $dark-gray;
   font: 100% $roboto-font-stack;
-  font-size: 2.2rem;  
-  font-weight: lighter;
+  font-size: 2.5rem;
   text-align: center;
 }
 
