--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -27,5 +27,6 @@
                       class: 'field' %>
     </div>
     <%= f.submit t('.submit'), class: 'submit-btn'%>
-  <% end %> 
+  <% end %>
+  <%= link_to t('.back'), clients_path, class: 'nav-btn' %>
 </div>
