--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -1,8 +1,10 @@
 .header {
-  width: 100%;
+  width: 360px;
+  margin: 5rem auto;
   color: $dark-gray;
   font: 100% $roboto-font-stack;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
+  text-align: center;
 }
 
 .alert {
