--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -15,3 +15,10 @@
   p { font-size: 1rem; }
   ul { list-style: none; }
 }
+
+@media (max-width: 375px) {
+  .header {
+    width: 100%;
+    font-size: 32px;
+  }
+}
