--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -7,6 +7,17 @@
   text-align: center;
 }
 
+.clients-list {
+  .empty-list {
+    width: 100%;
+    padding: 2rem;
+    color: $gray;
+    font-size: 1.6rem;
+    text-align: center;
+    border: 2px solid $light-gray;
+  }
+}
+
 .alert {
   text-align: center;
   margin-bottom: 6px;
