--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,7 +1,7 @@
 <div class="client-card">
   <div class="client-card-container">
     <div class="card-text">  
-      <h3><%= @client.first_name %><%= @client.last_name %></h3>
+      <h3><%= "#{@client.first_name} #{@client.last_name}" %></h3>
       <h5><%= @client.email %></h5>
       <h5><%= @client.mobile_phone %></h5>
     </div>  
