--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,30 +1,30 @@
-<div class="form-container">
+<div class="form">
   <%= form_for(client, url: url) do |f| %>
     <%= render 'shared/error_messages', object: client %>
-    <div class="form">
+    <div class="form__group">
       <%= f.text_field :first_name,
                       autofocus:true,
                       autocomplete: 'on',
-                      placeholder: t('.name'), 
-                      class: 'field' %>
+                      placeholder: t('.name'),
+                      class: 'form__group__input' %>
     </div>
-    <div class="form">
+    <div class="form__group">
       <%= f.text_field :last_name,
                       autocomplete: 'on',
-                      placeholder: t('.last_name'), 
-                      class: 'field' %>
+                      placeholder: t('.last_name'),
+                      class: 'form__group__input' %>
     </div>
-    <div class="form">
+    <div class="form__group">
       <%= f.email_field :email,
                       autocomplete: 'on',
                       placeholder: t('.email'),
-                      class: 'field' %>
+                      class: 'form__group__input' %>
     </div>
-    <div class="form">
+    <div class="form__group">
       <%= f.text_field :mobile_phone,
                       autocomplete: 'on',
                       placeholder: t('.phone'),
-                      class: 'field' %>
+                      class: 'form__group__input' %>
     </div>
     <%= f.submit t('.submit'), class: 'submit-btn'%>
   <% end %>
