--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,39 @@
 <h3 class="header"><%= t('.header') %></h3>
-<div class="form-container">
+<div class="form">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render 'shared/error_messages', object: resource %>
-    <div class="form">
+    <div class="form__group">
       <%= f.text_field :first_name,
                         autofocus: true,
                         autocomplete: 'on',
                         placeholder: t('.name'), 
-                        class: 'field' %>
+                        class: 'form__group__input' %>
     </div>
-    <div class="form">
+    <div class="form__group">
       <%= f.text_field :last_name,
                         autofocus: true,
                         autocomplete: 'on',
                         placeholder: t('.last_name'), 
-                        class: 'field' %>
+                        class: 'form__group__input' %>
     </div>
-    <div class="form">
+    <div class="form__group">
       <%= f.email_field :email,
                         autofocus: true,
                         autocomplete: 'on',
                         placeholder: t('.email'), 
-                        class: 'field' %>
+                        class: 'form__group__input' %>
     </div>
-    <div class="form">
+    <div class="form__group">
       <%= f.password_field :password,
                             autocomplete: 'off',
                             placeholder: t('.password'), 
-                            class: 'field' %>
+                            class: 'form__group__input' %>
     </div>
-    <div class="form">
+    <div class="form__group">
       <%= f.password_field :password_confirmation,
                             autocomplete: 'off',
                             placeholder: t('.password_confirmation') ,
-                            class: 'field' %>
+                            class: 'form__group__input' %>
     </div>  
     <div>
       <%= f.submit t('.signup'), class: 'submit-btn' %>
