--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,8 @@
   "base/typography";
 
 @import
-  "components/buttons";
+  "components/buttons",
+  "components/popup_box";
 
 @import 
   "shared/navbar",
