some base css enhancements

--- a/app/assets/stylesheets/abstracts/_mixins.scss
+++ b/app/assets/stylesheets/abstracts/_mixins.scss
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%);
 }
 
-@mixin scrollbars($height, $width, $bar, $background) {
+@mixin scrollbar($height, $width, $bar, $background) {
 
   &::-webkit-scrollbar {
     height: $height;
