--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -1,25 +1,35 @@
+/**
+ * 1. Set up a decent box model on the root element.
+ */
+html {
+  box-sizing: border-box;
+}
+
 *,
 ::before,
 ::after {
   box-sizing: inherit;
 }
 
-html {
-  box-sizing: border-box;
-}
-
+/**
+ * 1. Reset default margin
+ * 2. Prevent horizontal scrolling
+*/
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0; /* 1 */
+  color: #444;
   display: flex;
   background: $lighter-gray;
   font: 100% $ubuntu-font-stack;
-  @include scrollbars(0.5em, 0.43em, $dark-yellow, $black);
+  overflow-x: hidden; /* 2 */
+  @include scrollbar(0.5em, 0.43em, $dark-yellow, $black);
+
   main {
     height: 90%;
     width: 100%;
     @include center-it;
   }
+
   @media (max-width: 650px) {
     main {
       margin-top: 0;
@@ -34,6 +44,6 @@ ul {
 }
 
 a {
-  color: #2b2b2b;
+  color: inherit;
   text-decoration: none;
 }
