--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
-@import 
+@import
   "abstracts/mixins",
   "abstracts/variables";
 
-@import 
+@import
   "base/base",
   "base/normalize",
   "base/typography";
@@ -13,13 +13,9 @@
   "components/buttons",
   "components/popup_box";
 
-@import 
-  "shared/navbar",
-  "shared/forms";
-
-@import 
-  "pages/clients";
+@import
+  "layouts/navbar",
+  "layouts/forms";
 
 @import
-  url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap'),
-  url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+  "pages/clients";
