--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -1,3 +1,7 @@
+@import
+  url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap'),
+  url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
 .header {
   width: 360px;
   margin: 5rem auto;
