--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,6 @@
 
 @import
   "base/base",
-  "base/normalize",
   "base/typography";
 
 @import
@@ -19,3 +18,6 @@
 
 @import
   "pages/clients";
+
+@import
+  "vendors/normalize";
