[REF] apply grid to main layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,8 +9,10 @@
   "base/typography";
 
 @import
-  "layouts/navbar",
-  "layouts/forms";
+  "partials/navbar",
+  "partials/forms",
+  "partials/grids",
+  "partials/totally_useless_header";
 
 @import
   "components/buttons",
