--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -2,9 +2,8 @@
   url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap'),
   url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
-.header {
-  width: 360px;
-  margin: 5rem auto;
+.legend {
+  width: 100%;
   color: $dark-gray;
   font: 100% $roboto-font-stack;
   font-size: 2.8rem;
@@ -32,7 +31,7 @@
 }
 
 @media (max-width: 375px) {
-  .header {
+  .legend {
     width: 100%;
     font-size: 32px;
   }
