--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,5 +1,5 @@
-<h3 class="header"><%= t('.header') %></h3>
 <div class="clients-list">
+  <h1 class="legend"><%= t('.legend') %></h1>
   <% unless current_user.clients.exists? %>
     <p class="clients-list__empty">
       <%= t('.empty') %>
