--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,2 +1,4 @@
-<h3 class="header"><%= t('.header') %></h3>
-<%= render 'form', client: @client, url: clients_path %>
+<div class="form">
+  <h1 class="legend"><%= t('.legend') %></h1>
+  <%= render 'form', client: @client, url: clients_path %>
+</div>
