--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,39 @@
 <%= render 'shared/error_messages', object: resource %>
-<h3 class="header"><%= t('.header') %></h3>
+
 <div class="form">
+  <h1 class="legend"><%= t('.legend') %></h1>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <div class="form__group">
       <%= f.text_field :first_name,
                         autofocus: true,
                         autocomplete: 'on',
-                        placeholder: t('.name'), 
+                        placeholder: t('.name'),
                         class: 'form__group__input' %>
     </div>
     <div class="form__group">
       <%= f.text_field :last_name,
                         autofocus: true,
                         autocomplete: 'on',
-                        placeholder: t('.last_name'), 
+                        placeholder: t('.last_name'),
                         class: 'form__group__input' %>
     </div>
     <div class="form__group">
       <%= f.email_field :email,
                         autofocus: true,
                         autocomplete: 'on',
-                        placeholder: t('.email'), 
+                        placeholder: t('.email'),
                         class: 'form__group__input' %>
     </div>
     <div class="form__group">
       <%= f.password_field :password,
                             autocomplete: 'off',
-                            placeholder: t('.password'), 
+                            placeholder: t('.password'),
                             class: 'form__group__input' %>
     </div>
     <div class="form__group">
       <%= f.password_field :password_confirmation,
                             autocomplete: 'off',
-                            placeholder: t('.password_confirmation') ,
+                            placeholder: t('.password_confirmation'),
                             class: 'form__group__input' %>
     </div>  
     <div>
@@ -40,4 +41,4 @@
     </div>
     <%= link_to t('.back'), new_user_session_path, class: 'nav-btn' %>
   <% end %>
-</div>    
+</div>
