change sizes n add shadows

--- a/app/assets/stylesheets/partials/_totally_useless_header.scss
+++ b/app/assets/stylesheets/partials/_totally_useless_header.scss
@@ -3,6 +3,7 @@
   grid-area: tuh;
   background: $black;
   color: $gray;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,.2);
 
   &__logo {
     height: 50%;
