--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,15 +1,18 @@
 .submit-btn {
-  height: 30px;
+  height: 40px;
   width: 100%;
+  margin-top: 8px;
   margin-bottom: 10px;
   font: $roboto-font-stack;
-  font-size: 14px;
+  font-size: 15px;
   background-color: $ice;
   color: $gray;
   border: none;
   border-radius: 5px;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
   cursor: pointer;
   transition: $fast;
+
   &:hover {
     background-color: $light-gray;
     color: $white;
@@ -21,6 +24,7 @@
   font-weight: bolder;
   text-decoration: none;
   color: $gray;
+
   &:hover {
     color: $black;
   }
