--- a/app/assets/stylesheets/components/_popup_box.scss
+++ b/app/assets/stylesheets/components/_popup_box.scss
@@ -1,13 +1,12 @@
 .popup {
-  min-width: 30%;
-  max-width: 50%;
+  width: 100%;
   padding: 20px;
   position: absolute;
-  top: 0;
-  right: 5%;
-  background: #fff;
+  top: -30%;
+  right: 0;
+  background: $ice;
   border-radius: 5px;
-  transition: all 5s ease-in-out;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
   z-index: 999;
 
   h2 {
@@ -23,8 +22,12 @@
     font-weight: bold;
     text-decoration: none;
     color: #333;
+    cursor: pointer;
     &:hover {
       color: $dark-yellow;
     }
+  }
+  &:hover {
+    box-shadow: 0 4px 12px 0 rgba(0,0,0,.2);
   }
 }
