remove useless mq/ prevent scrolling

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -12,16 +12,10 @@ body {
   color: #444;
   background: $lighter-gray;
   font: 100% $ubuntu-font-stack;
-  overflow-x: hidden;
+  overflow: hidden;
   @include scrollbar(0.5em, 0.43em, $dark-yellow, $black);
 
   .chart {
     grid-area: chart;
-  }
-
-  @media (max-width: 650px) {
-    .chart {
-      margin-top: 0;
-    }
   }
 }
