--- a/app/assets/stylesheets/abstracts/_mixins.scss
+++ b/app/assets/stylesheets/abstracts/_mixins.scss
@@ -1,22 +1,28 @@
 @mixin center-it {
   position: absolute;
-  top: 50%;
+  top:  50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-@mixin scrollbar($height, $width, $bar, $background) {
+@mixin scrollbar( $height, 
+                  $width,
+                  $border-rad,
+                  $bar-clr,
+                  $bg-clr) {
 
   &::-webkit-scrollbar {
     height: $height;
-    width: $width;
+    width:  $width;
   }
 
   &::-webkit-scrollbar-thumb {
-    background: $bar;
+    background-color: $bar-clr;
+    border-radius: $border-rad;
   }
 
   &::-webkit-scrollbar-track {
-    background: $background;
+    background-color: $bg-clr;
+    border-radius: $border-rad;
   }
 }
