--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
         <%= render 'shared/navbar' %>
       <% end %>
       <div class="chart">
+        <%= render 'shared/flash_messages' %>
         <%= yield %>
       </div>
     </div>
